--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
 
   build_runner: ^1.0.0
   json_serializable: ^2.0.0
+  path_provider: ^0.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -41,7 +42,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/playing_page_disc.png
+    - assets/playing_page_needle.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
